# simpleCalc

./: CMakeLists.txt
.github/workflows/: auto.yml
lib/: CMakeLists.txt  calculus.cpp  calculus.h
tests/: CMakeLists.txt  simple_calc_tests.cpp
